--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "altair>=6.0.0",
+    "marimo>=0.19.8",
+    "numpy>=2.4.2",
+    "polars>=1.38.0",
+    "scipy>=1.17.0",
+    "statsmodels>=0.14.6",
+]
