--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "marimo>=0.19.8",
     "numpy>=2.4.2",
     "polars>=1.38.0",
+    "pyarrow>=23.0.0",
     "ruff>=0.15.0",
     "scipy>=1.17.0",
     "statsmodels>=0.14.6",
